[package]
name = "nimage"
description = "A simple imaging library"
version = "0.1.0"
edition = "2024"
authors = ["NDRAEY <pikachu_andrey@vk.com>"]
license = "MIT"
repository = "https://github.com/NDRAEY/nimage"
categories = ["graphics", "multimedia", "no-std"]
keywords = ["canvas", "image", "no_std"]

[features]
default = ["tga", "std"]
std = []
tga = ["dep:tinytga"]

[dependencies]
tinytga = { version = "0.5.0", optional = true }
